# kami-dataset-validator

./: pyproject.toml
kami_dataset_validator/: constants.py  validate_customer.py
kami_dataset_validator/datasource/: qy_active_customers.sql
kami_dataset_validator/validators/: cep.py  cnpj.py  cpf.py  cpf_cnpj.py  email.py  phone.py
tests/: test_cep.py  test_cnpj.py  test_cpf.py  test_email.py  test_phone.py  test_viacep_api.py
