[tool.poetry]
name = "kami-dataset-validator"
version = "0.1.0"
description = ""
authors = ["Maicon de Menezes <maicon@kamico.com.br>"]
readme = "README.md"
packages = [{include = "kami_dataset_validator"}]

classifiers = [  
  "Topic :: Database",
  "Programming Language :: Python :: 3",      
  "Natural Language :: English",
  "Development Status :: 4 - Beta",
]

[tool.poetry.urls]
"Source" = "https://github.com/devkami/kami-dataset-validator"
"Bug Tracker" = "https://github.com/devkami/kami-dataset-validator/issues"

[tool.poetry.dependencies]
python = "^3.10"
kami-logging = "^0.2.1"
pandas = "^2.1.0"
validate-docbr = "^1.10.0"
kami-uno-database = "^0.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
blue = "^0.9.1"
isort = "^5.12.0"
taskipy = "^1.11.0"
ipython = "^8.14.0"
ipykernel = "^6.23.1"
notebook = "^6.5.4"
nbformat = "^5.9.0"

[tool.poetry.group.doc.dependencies]
mkdocs-material = "^9.1.15"
mkdocstrings = "^0.22.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = "."
addopts = "--doctest-modules"

[tool.isort]
profile = "black"
line_length = 79

[tool.taskipy.tasks]
lint-review = "blue --check --diff . && isort --check --diff ."
lint-fix = "blue . && isort ."
pre_test = "task lint-fix"
test = "pytest -s -x --cov=kami_messenger -vv -rs"
post_test = "coverage html"
docs = "mkdocs serve"